# rust-websocket-demo

./: Cargo.toml  README.md  environment.config
doc/: architecture.puml  webservices.puml
src/: main.rs  ws.rs
