[package]
name = "ws-platform"
version = "0.2.0"
authors = ["Dan Shields <d4nshields@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.9"
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
futures = { version = "0.3", default-features = false }
#
#lazy_static = "1"
#reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
#reqwest-middleware = { version = "0.1"}
#async-trait = "0.1"
#task-local-extensions = "0.1"
#async_once = "0.2"
#env_logger = "0.9"
#log = "0.4"
#opentelemetry = { version = "0.18", features = ["trace", "rt-tokio-current-thread"]}
